--- a/NumericSequenceCalculator/NumericSequenceCalculator/Views/Home/Index.cshtml
+++ b/NumericSequenceCalculator/NumericSequenceCalculator/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model NumericSequenceCalculator.Models.SequenceModel
-
+@section Scripts 
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
 <header>
     <div class="content-wrapper">
         <div class="float-left">
@@ -12,10 +15,11 @@
     <section class="featured">
         <div class="content-wrapper">
             @using (Html.BeginForm("NumberResult", "Home"))
-            {
+            {@Html.ValidationSummary(true)
+               <span style="color:red"> <b>@TempData["message"]</b></span><br />
+                @Html.ValidationMessageFor(m => m.Number)<br />
                 @Html.Label("Enter a Number:")
                 @Html.TextBoxFor(m => m.Number)<br />
-                @Html.ValidationMessageFor(m => m.Number)
                 <input type="submit" value="Click Here" />
             
                 @Html.ActionLink("Reset", "ResetFields")
@@ -24,8 +28,7 @@
                 <section class="content-wrapper main-content clear-fix">
                     @if (Model != null)
                     {
-                        @Html.Label("All Numbers:")
-                       
+                        @Html.Label("All Numbers:")                       
                         @Html.LabelForModel(GetModifiedString(Model.AllNumberSequence));                                                 
                        
                         <br />
@@ -44,17 +47,17 @@
 
                     }
 
-                    @functions {   
+                    @functions { 
    
                     
-                        string GetModifiedString(List<string> sequenceList)
+                        string GetModifiedString(List<string> sequenceList)//construct the data string
                         {
                             var allNumberString = string.Empty;
-                            for (int i = 0; i < sequenceList.Count; i++)
+                            for (int i = 0; i < sequenceList.Count; i++)//iterating through the list of sequence
                             {
                                 if (i < sequenceList.Count - 1)
                                 {
-                                    allNumberString = allNumberString + string.Format(sequenceList[i] + ", ");
+                                    allNumberString = allNumberString + string.Format(sequenceList[i] + ", ");//adding commas at the end till (n-1) number
                                 }
                                 else
                                 {
